--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ahmed-cucumber-practice",
+  "name": "software-testing",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,7 +7,6 @@
     "test-ui": "cucumber-js test/musa/9",
     "test-api": "jest test/Jest_api"
   },
-  "author": "https://github.com/ahmedazhar2299",
   "license": "ISC",
   "devDependencies": {
     "chai": "^4.3.6",
