--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "develop": "cross-env NODE_ENV=development nodemon server.js",
     "prod": "cross-env NODE_ENV=production node server.js",
     "build": "next build",
-    "test": "jest",
+    "test": "jest test/ --coverage --verbose",
     "deploy": "npm run build && xdn deploy",
     "prettier": "prettier --write \"**/*.js\" \"!{node_modules,.next,.yalc}/**\""
   },
@@ -27,9 +27,11 @@
     "@material-ui/lab": "4.0.0-alpha.57",
     "@material-ui/styles": "4.11.2",
     "@svgr/webpack": "^4.3.3",
+    "@testing-library/react": "^12.1.2",
     "clsx": "^1.0.4",
     "cross-env": "^5.2.0",
     "isomorphic-unfetch": "^3.0.0",
+    "jest": "^29.3.1",
     "lorem-ipsum": "^2.0.3",
     "module-alias": "^2.2.1",
     "next": "^10.0.3",
@@ -40,11 +42,14 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-storefront": "^8.17.4",
+    "react-test-renderer": "^17.0.2",
     "react-visibility-sensor": "^5.1.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
     "babel-plugin-transform-imports": "^2.0.0",
     "dotenv": "^8.2.0",
+    "jest-environment-jsdom": "^29.3.1",
     "nodemon": "^2.0.2",
     "prettier": "^1.19.1"
   },
@@ -53,5 +58,8 @@
       "npm run prettier",
       "git add"
     ]
+  },
+  "jest": {
+    "testEnvironment": "jsdom"
   }
 }
