--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "build": "next build",
     "test": "jest test/ --coverage --verbose",
     "deploy": "npm run build && xdn deploy",
-    "prettier": "prettier --write \"**/*.js\" \"!{node_modules,.next,.yalc}/**\""
+    "prettier": "prettier --write \"**/*.js\" \"!{node_modules,.next,.yalc}/**\"",
+    "lint": "eslint .",
+    "lint-fix": "eslint --fix"
   },
   "husky": {
     "hooks": {
@@ -47,8 +49,12 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
     "babel-plugin-transform-imports": "^2.0.0",
     "dotenv": "^8.2.0",
+    "eslint": "^8.28.0",
+    "eslint-plugin-react": "^7.31.11",
     "jest-environment-jsdom": "^29.3.1",
     "nodemon": "^2.0.2",
     "prettier": "^1.19.1"
